--- a/.github/workflows/hello-world-build-and-publish.yml
+++ b/.github/workflows/hello-world-build-and-publish.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main" ]
     paths:
-      - services/hello-world
+      - 'services/hello-world/**'
 
 env:
   # Use docker.io for Docker Hub if empty
