--- a/.github/workflows/hello-world-build-and-publish.yml
+++ b/.github/workflows/hello-world-build-and-publish.yml
@@ -12,7 +12,7 @@ on:
     branches: [ "main" ]
     # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#patterns-to-match-file-paths
     paths:
-      - "${{ env.SERVICE_PATH }}/**"
+      - 'services/hello-world/**'
 
 
 jobs:
